[gd_scene load_steps=7 format=3 uid="uid://cl677b0oxnecg"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_j4km5"]
[ext_resource type="PackedScene" uid="uid://dh1pc40g882fx" path="res://Character_Scenes/transition.tscn" id="2_5rnky"]
[ext_resource type="Theme" uid="uid://m70pqb8xi5pr" path="res://Fonts/Options.tres" id="2_julpn"]
[ext_resource type="Texture2D" uid="uid://dhxo84uai0nl2" path="res://UI/Options Menu.png" id="2_pgycs"]
[ext_resource type="FontFile" uid="uid://bnrielyysf7dk" path="res://Fonts/SixtyfourConvergence-Regular-VariableFont_BLED,SCAN,XELA,YELA.ttf" id="3_08f1p"]
[ext_resource type="AudioStream" uid="uid://b0xvk3u8e3yhn" path="res://SFX/Main Menu track.ogg" id="6_t6i77"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 182.0
offset_right = 21.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j4km5")

[node name="Transition" parent="." instance=ExtResource("2_5rnky")]
visible = false

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -161.0
offset_top = -184.0
offset_right = 1335.0
offset_bottom = 702.0
texture = ExtResource("2_pgycs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -7.0
offset_right = -663.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.02097, 1.99049)
theme_override_constants/margin_left = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_julpn")
theme_override_fonts/font = ExtResource("3_08f1p")
text = "Volume
"

[node name="volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_julpn")
theme_override_fonts/font = ExtResource("3_08f1p")
text = "Mute"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_08f1p")
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_08f1p")
text = "Fullscreen"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_08f1p")
text = "How to Play

WASD To Move around

Left-Mouse Click to turn on Flashlight

Shift to sprint"

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t6i77")
volume_db = -80.0
autoplay = true

[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
